--- a/spotify-app/src/assets/index.css
+++ b/spotify-app/src/assets/index.css
@@ -1,18 +1,26 @@
 @import './defaults.css';
 
 body {
-    display: flex;
     margin: 0;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 button {
     border: none;
 }
+
+.flex-row {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
 .icon {
     background-color: transparent;
 }
 
 .App {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    min-height: 100vh;
 }
