--- a/spotify-app/src/assets/navigation_utf8.css
+++ b/spotify-app/src/assets/navigation_utf8.css
@@ -1,4 +1,4 @@
-@import './defaults.css';
+﻿@import './defaults.css';
 
 .top-nav {
     position: fixed;
@@ -17,35 +17,22 @@
 .hamburger {
     display: block;
 }
-.side-nav-container {
+
+.side-nav {
     position: fixed;
-    top: 0;
+    top: 60px;
     left: 0;
     width: 350px;
-    margin-top: 60px;
     height: calc(100vh - 60px);
+    background-color: var(--background-sidenav);
     transform: translateX(-100%);
     transition: transform 0.3s ease;
-    z-index: 1001;
-    padding: 10px;
+    z-index: 999;
+    padding: 20px;
     box-sizing: border-box;
 }
-.side-nav {
-    background-color: var(--background-sidenav);
-    border-radius: 20px;
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    box-sizing: border-box;
-    box-shadow: 0 0 10px var(--shadow);
-}
 
-.side-nav h1 {
-    margin: 0;
-    padding: 10px;
-}
-
-.side-nav-container.open {
+.side-nav.open {
     transform: translateX(0);
 }
 
@@ -65,13 +52,15 @@
 }
 
 @media (min-width: 768px) {
-    .hamburger { display: none; }
-    .side-nav-container { transform: translateX(0);}
-    .main-content { margin-left: 350px; }
-}
+    .hamburger {
+        display: none;
+    }
 
-@media (max-width: 767px) {
-    .side-nav-container.open {
-        width: calc(100vw - 40px);
+    .side-nav {
+        transform: translateX(0);
+    }
+
+    .main-content {
+        margin-left: 350px;
     }
 }
